chore: updating swagger
