# docs/openapi/swagger.json
@@ -38,7 +38,7 @@
                 }
             }
         },
-        "/students": {
+        "/v1/students": {
             "get": {
                 "description": "Allows you to search for students by controlling pagination, sorting and filtering results.",
                 "consumes": [
@@ -176,7 +176,7 @@
                 }
             }
         },
-        "/students/{id}": {
+        "/v1/students/{id}": {
             "get": {
                 "description": "Allows you to get the details of a student by ID.",
                 "consumes": [
